After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 329515 - moving items into computer:/// gives weird errors
moving items into computer:/// gives weird errors
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
2.21.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2006-02-01 20:44 UTC by Andrea Vettorello
Modified: 2012-08-26 12:51 UTC
See Also:
GNOME target: ---
GNOME version: 2.21/2.22


Attachments
Makes it possible to drop files to volumes in computer:// view (2.78 KB, patch)
2009-10-12 21:29 UTC, Marcus Carlson
none Details | Review
Adds drop support to volumes in computer:// (3.00 KB, patch)
2009-10-13 21:19 UTC, Marcus Carlson
none Details | Review
Don't accept drops over non-writable locations in icon view (2.39 KB, patch)
2012-08-25 00:06 UTC, William Jon McCann
committed Details | Review
Don't allow drops on tabs for unwritable slots (1.02 KB, patch)
2012-08-25 00:06 UTC, William Jon McCann
committed Details | Review
Don't allow any type of drop (even text) if the target is readonly (4.59 KB, patch)
2012-08-25 15:06 UTC, William Jon McCann
committed Details | Review

Description Andrea Vettorello 2006-02-01 20:44:09 UTC
Forwarding a bug filed on the Debian BTS:
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=312478

<i>
I just (accidentally) tried moving an item from my home into 'Computer'
(computer:///). Now, for whatever reason, that displays the message:

  The file "computer:///...07b4.desktop" already exists.  Would you like to
  replace it?

  If you replace an existing file, its contents will be overwritten.
  [Skip] [Replace]

If I try with a different source file I get the same message, indicating
that maybe nautilus has a strange idea of what the destination is. If I tell
it to overwrite the file, I get:
  Error "Operation not permitted" while copying computer:///...07b4.desktop".

  Would you like to continue?
  [Skip] [Cancel] [Retry]

Skip is the only thing that works, Cancel just displays another error and
Retry keeps displaying the same one.

Something's definitely odd there about what nautilus thinks the target of
the drag&drop is when it is computer:///. It probably should outright reject
that drop.

johannes
</i>

I confirm the same behaviour with nautilus 2.12.2
Comment 1 Fabio Bonelli 2006-02-02 00:10:42 UTC
Thanks for the bug report.

I can confirm this with 2.13.5 too.
Comment 2 Cosimo Cecchi 2008-01-20 01:07:08 UTC
This happens also with 2.21.5. I get a dialog saying "Operation not supported by backend". The right thing would be IMHO disable DnD to the view when you are in "Computer".
Comment 3 Marcus Carlson 2009-10-04 00:07:50 UTC
Cosimo, can we make a check if the target is computer:// (hardcoded) and then display a friendly message? I'll fix a patch for it in such case.
Comment 4 Benjamin Otte (Company) 2009-10-10 22:17:07 UTC
FWIW, it'd probably be nice to improve the error message saying something like "you cannot save to $PLACE" instead of "operation not supported by backend", which is quite a technical way of saying it.

If anyone wants to implement that in gvfs, the file is in gvfs, daemon/gvfsjobopenforwrite.c, function is run.

Not sure what the best text for $PLACE is though, maybe the backend's display name?
Comment 5 Marcus Carlson 2009-10-12 21:29:56 UTC
Created attachment 145311 [details] [review]
Makes it possible to drop files to volumes in computer:// view

This is just the nautilus part to be able to drop files into a volume in the computer view. The rest (the hard work) would be to enable write access in the computer backend.

This will sort of fix the problem of this bug as the error message will go away for some cases.
Comment 6 Marcus Carlson 2009-10-13 21:19:29 UTC
Created attachment 145379 [details] [review]
Adds drop support to volumes in computer://
Comment 7 Marcus Carlson 2009-10-13 21:22:45 UTC
This last patch adds support without changing the gvfs code and you can drop files to a mounted volume. Otherwise it will still give you the error message as this bug is about. (Not sure this is the right bug for this patch but it does, in some way, change the error message (by enable drop support)).
Comment 8 William Jon McCann 2012-08-25 00:06:45 UTC
Created attachment 222370 [details] [review]
Don't accept drops over non-writable locations in icon view
Comment 9 William Jon McCann 2012-08-25 00:06:49 UTC
Created attachment 222371 [details] [review]
Don't allow drops on tabs for unwritable slots
Comment 10 Cosimo Cecchi 2012-08-25 01:16:02 UTC
Review of attachment 222370 [details] [review]:

Makes sense
Comment 11 Cosimo Cecchi 2012-08-25 01:16:42 UTC
Review of attachment 222371 [details] [review]:

Looks good
Comment 12 William Jon McCann 2012-08-25 13:23:55 UTC
Need to do the same for list view.
Comment 13 William Jon McCann 2012-08-25 15:06:26 UTC
Created attachment 222402 [details] [review]
Don't allow any type of drop (even text) if the target is readonly
Comment 14 Cosimo Cecchi 2012-08-25 19:30:17 UTC
Review of attachment 222402 [details] [review]:

Looks good to me.