Don't accept drops over non-writable locations in icon view

https://bugzilla.gnome.org/show_bug.cgi?id=329515